--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
 <img src="https://blob.gifcities.org/gifcities/2MZ6LKJLVHL3MHVMLBT4WSYACJEVZGPQ.gif"> </img>
 <br>
 <h2><strong>Welcome to my world!</strong></h2>
+<img src="https://blob.gifcities.org/gifcities/4IV2J5QDQYVLM3J6VIM5DE7VW3HY6BKI.gif"> </img>
 <br>
 <br>
 <p> Here you will be able to see my various interests. </p>
 <p> You will also be able to see cool pictures relating to my interests.</p>
+<img src="https://blob.gifcities.org/gifcities/3X2CFE24KDZ2YZVEYXQNAYDOKD4E4CJC.gif"> </img>
 <br>
 <br>
 <img src="https://blob.gifcities.org/gifcities/22QBG7VTJWVUY2UPMUCG4K4NR42E5WJY.gif"> </img>
@@ -32,7 +34,7 @@
  <li> Lew's Tournament Pro Speed Spool LFS Baitcast Reel</li>
 </ul>
 <img src="https://images.stockcake.com/public/6/9/2/692d435a-2a57-4d2f-9709-5213820c5277_large/cosmic-pizza-portal-stockcake.jpg"> </img>
-<h3> This is a table with my top 3 foods: </h3>
+<h3> This is a table with my top 4 foods: </h3>
 <table> 
 <tr> 
 </tr>
